[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/ball.png" type="Texture" id=1]
[ext_resource path="res://src/ball/ball.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/win.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/lose.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/break.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/start.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.930136 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.672727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 0.768627, 1, 1, 1, 0 )

[node name="ball" type="RigidBody2D"]
collision_layer = 4
collision_mask = 19
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="_audio_break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="_audio_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="_audio_lose" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[node name="_audio_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="_audio_win" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )

[node name="_visibillity" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.17233e-07, 0 )
scale = Vector2( 0.8, 0.8 )

[node name="_efect" type="CPUParticles2D" parent="."]
show_behind_parent = true
amount = 3
speed_scale = 5.0
local_coords = false
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )

[connection signal="screen_exited" from="_visibillity" to="." method="_on__ball_screen_exited"]
